added JavaFX support

--- a/build.gradle
+++ b/build.gradle
@@ -12,3 +12,26 @@ repositories {
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
+
+buildscript {
+    dependencies {
+        classpath group: 'de.dynamicfiles.projects.gradle.plugins', name: 'javafx-gradle-plugin', version: '8.8.2'
+    }
+    repositories {
+        mavenLocal()
+        mavenCentral()
+    }
+}
+
+apply plugin: 'javafx-gradle-plugin'
+
+jfx {
+    // minimal requirement for jfxJar-task
+    mainClass = 'pl.midas.gui.Main'
+
+    // minimal requirement for jfxNative-task
+    vendor = 'Sergiusz Pogorzała'
+    jfxAppOutputDir = "out/production/jfx/app"
+    jfxMainAppJarName = "midas.jar"
+    useEnvironmentRelativeExecutables = true
+}
