--- a/build.gradle
+++ b/build.gradle
@@ -10,6 +10,7 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.json', name: 'json', version: '20180130'
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
 
